added skills and tools section, experimenting a flexible table

--- a/assets/html/nav/navbar-main.html
+++ b/assets/html/nav/navbar-main.html
@@ -19,11 +19,12 @@
         </label>
 
         <ul class="nav-links">
-            <li class="nav-link"><a href="">Projects</a></li>
-            <!-- <li class="nav-link"><a  href="">Game Projects</a></li> -->
-            <!-- <li class="nav-link"><a  href="">App Projects</a></li> -->
-            <!-- <li><a href="">Gallery</a></li> -->
-            <li class="nav-link"><a href="/assets/html/about.html">About</a></li>
+            <li class="nav-link"><a href="#about-section">About</a></li>
+            <li class="nav-link"><a href="#skills-section">Skills</a></li>
+            <li class="nav-link"><a href="#tools-section">Tools</a></li>
+            <li class="nav-link"><a href="#projects-section">Projects</a></li>
+            <li class="nav-link"><a href="#contact-section">Contact</a></li>
+            <!-- <li class="nav-link"><a href="/assets/html/about.html">me</a></li> -->
         </ul>
     </div>
 </template>
