--- a/index.html
+++ b/index.html
@@ -38,21 +38,132 @@
 
     <!-- Main Content -->
     <main role="main" id="main-content">
+        <!-- About -->
         <div class="container">
-            <article class="layout-column align-center" aria-labelledby="section-intro">
-                <h2>Forge ideas into unforgettable experiences!</h2>
+            <h2 id="about-section">Hey there!</h2>
+            <article class="layout-column align-center section-divider" aria-labelledby="section-intro">
+                <h3>Forge ideas into unforgettable experiences!</h3>
                 <p>From enchanting pixel worlds to smart, seamless tools — every line of code and stroke of art here is
                     crafted to spark curiosity, solve real problems, and feel damn good to use.
                     <br>At <strong>datsforge</strong>, I don’t just build apps or games — I shape ideas into realities
                     that
                     click, captivate, and connect. You bring the vision. I'll forge the rest.
                 </p>
+
             </article>
         </div>
 
-        <div class="container">
+        <!-- Skills -->
+        <div class="container" aria-label="Skills section">
+            <h2 id="skills-section">Skills</h2>
+            <section class="layout-column section-divider" aria-label="Skills section">
+                <p>
+                    I’m a seasoned Java game developer with a passion for building highly customized RPGs and pixel art
+                    experiences. And yes—I handcraft every pixel of my games too. Every sprite, every scene, all forged
+                    with care and intent.
+                    <br>
+                    But I’m not just about games. I also design and build powerful Android apps using Kotlin and Jetpack
+                    Compose. From clean architecture and reactive UI to smooth performance and real-world utility—I
+                    bring ideas to life in app form too. Whether it's a smart productivity tool or a feature-rich
+                    utility, I aim to make apps that are elegant, useful, and a joy to use.
+                    <br>
+                    I don’t just develop things—I create them from scratch. Whether it's a world, a tool, or an idea, I
+                    bring it to life with attention to detail, functionality, and soul. Every project you’ll find here
+                    is a solo venture: coding, graphics, design—even this very website.
+                </p>
+                <section>
+                    <h3>Core Development Skills</h3>
+                    <div class="flex-table">
+                        <div class="flex-table-cell transparent">
+                            <h4>Languages & Frameworks</h4>
+                            <ul>
+                                <li>Java</li>
+                                <li>Kotlin (App development)</li>
+                                <li>LibGDX (Game dev)</li>
+                                <li>HTML5, CSS3, JavaScript</li>
+                                <li>Bash/Shell scripting</li>
+                            </ul>
+                        </div>
+                        <div class="flex-table-cell transparent">
+                            <h4>Game Development</h4>
+                            <ul>
+                                <li>LibGDX (1.13.1)</li>
+                                <li>Tiled (Map Editor)</li>
+                                <li>Aseprite (Pixel Art & Animation)</li>
+                                <li>Custom-built engine/framework logic</li>
+                            </ul>
+                        </div>
+                        <div class="flex-table-cell transparent">
+                            <h4>App Development</h4>
+                            <ul>
+                                <li>Android SDK (Java/Kotlin)</li>
+                                <li>Custom UI/UX using Jetpack Components</li>
+                                <li>Ad integrations</li>
+                                <li>Performance Optimization for Low-end devices</li>
+                                <li>Open-source libraries (Retrofit, Room, etc.)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+
+                <section>
+                    <h3>Design & Pixel Art</h3>
+                    <div class="flex-table">
+                        <div class="flex-table-cell transparent">
+                            <h4>Tools & Skills</h4>
+                            <ul>
+                                <li>Aseprite (Main tool for sprite sheets, tilesets)</li>
+                                <li>Minimalist UI design for indie projects</li>
+                                <li>Icon design & in-game visual assets</li>
+                                <li>Asset optimization (tiny but powerful visuals)</li>
+                            </ul>
+                        </div>
+                        <div class="flex-table-cell transparent">
+                            <h4>Style</h4>
+                            <ul>
+                                <li>Pixel art (16x16, 32x32, retro aesthetic)</li>
+                                <li>Game UI mockups</li>
+                                <li>Branding assets (e.g., logos for apps or games)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </section>
+            </section>
+        </div>
+
+        <!-- Tools -->
+        <div class="container" aria-label="Development tools used section">
+            <h2 id="tools-section">Tools & Platforms</h2>
+            <section class="layout-column section-divider" aria-label="Skills section">
+                <div class="flex-table">
+                    <div class="flex-table-cell transparent">
+                        <h4>Development</h4>
+                        <ul>
+                            <li>Android Studio & IntelliJ IDEA</li>
+                            <li>VS Code</li>
+                            <li>Git + GitHub (Open-source contributions)</li>
+                            <li>Debian (XFCE) Environment</li>
+                            <li>Bash/Shell scripting</li>
+                        </ul>
+                    </div>
+                    <div class="flex-table-cell transparent">
+                        <h4>Graphics and designs</h4>
+                        <ul>
+                            <li>Aseprite</li>
+                            <li>krita, gimp, photoshop</li>
+                            <li>Inkscape</li>
+                            <li>Libgdx tools (tiled, skin comp., etc)</li>
+                        </ul>
+                    </div>
+            </section>
+            </section>
+        </div>
+
+        <!-- Projects -->
+        <div class="container" aria-label="Projects section">
+            <h2 id="projects-section">Projects</h2>
             <section class="layout-column section-divider " aria-labelledby="section-apps">
-                <h2 id="section-apps">Apps that solve real problems</h2>
+                <h3 id="section-apps">Apps that solve real problems</h3>
                 <div class="card align-right">
                     <img class="card-media" src="assets/images/mockups/rentfinder_m3.png" alt="Rent Finder App Mockup"
                         loading="lazy" />
@@ -80,7 +191,7 @@
 
         <div class="container">
             <section class="layout-column" aria-labelledby="section-games">
-                <h2 id="section-games">Chill with casual games</h2>
+                <h3 id="section-games">Chill with casual games</h3>
                 <div class="card align-left">
                     <div class="card-content">
                         <p>Spidee Tap and Shooting Marbles are casual mobile games developed for android, designed for
@@ -114,7 +225,7 @@
 
         <div class="container">
             <section class="layout-column" aria-labelledby="section-rpg">
-                <h2 id="section-rpg">RPG adventures!</h2>
+                <h3 id="section-rpg">RPG adventures!</h3>
                 <div class="card align-right">
                     <img class="card-media" src="assets/images/mockups/sal_m1.png" alt="Swords and Legends Mockup"
                         loading="lazy" />
@@ -143,7 +254,7 @@
 
         <div class="container">
             <section class="layout-column" aria-labelledby="section-tools">
-                <h2 id="section-tools">Useful tools</h2>
+                <h3 id="section-tools">Useful tools</h3>
                 <div class="card align-left">
                     <div class="card-content">
                         <div>
@@ -171,9 +282,11 @@
             </section>
         </div>
 
-        <div class="container">
-            <section class="layout-column section-divider" aria-labelledby="section-contact">
-                <h2 id="section-contact">Let’s build something!</h2>
+        <!-- Contact -->
+        <div class="container" aria-label="Contact section">
+            <h2 id="contact-section">Contact me</h2>
+            <section class="layout-column section-divider" aria-labelledby="contact-section">
+                <h3>Let’s build something!</h3>
                 <div class="mockup_descriptions">
                     <p>Drop me an email anytime:</p>
                     <a href="mailto:contact@datsforge.com" class="button-text-icon"
@@ -185,9 +298,6 @@
                     </a>
             </section>
         </div>
-
-
-
     </main>
 
     <footer></footer>
