--- a/index.html
+++ b/index.html
@@ -30,31 +30,40 @@
 
     <main role="main" id="main-content">
         <!-- Hero -->
-        <section class="hero" aria-labe="Hero section">
+        <section class="hero" aria-label="Hero section">
             <div class="wrapper">
                 <div class="slogan" aria-label="Slogan">
                     <h1>Welcome to datsforge!</h1>
+                    <!-- Example how to create a terminal typing animation-->
+                    <!-- <h1 class="typing-anim" data-lines='[
+  "Welcome to datsforge...",
+  "Generating synthetic thoughts...",
+  "Terminal ready for domination..."
+]'></h1> -->
                     <p>" YOUR ideas</p>
-                    <p>-<strong>Not just built , FORGED!</strong> "</p>
+                    <p>-<strong>Not just built, FORGED!</strong> "</p>
+                </div>
+                <div class="fireflies">
+                    <!-- Firefly elements will be created here by JS -->
                 </div>
                 <div class="contact-info" aria-label="Contact Information">
-                    <a href="mailto:contact@datsforge.com" class="icon-toggle-btn"
-                        aria-label="Email contact@datsforge.com">
-                        <svg class="icon">
-                            <use href="#mail_icon"></use>
+                    <button id="theme-toggle" class="icon-toggle-btn" aria-label="Toggle theme" type="button">
+                        <svg class="icon theme-icon" width="24" height="24">
+                            <use href="#dark_mode_icon"></use>
                         </svg>
-                    </a>
+                    </button>
                     <a href="https://github.com/datsforge/datsforge" class="icon-toggle-btn"
                         aria-label="Visit datsforge on GitHub" target="_blank" rel="noopener noreferrer">
                         <svg class="icon">
                             <use href="#github_icon"></use>
                         </svg>
                     </a>
-                    <button id="theme-toggle" class="icon-toggle-btn" aria-label="Toggle theme" type="button">
-                        <svg class="icon theme-icon" width="24" height="24">
-                            <use href="#dark_mode_icon"></use>
+                    <a href="mailto:contact@datsforge.com" class="icon-toggle-btn"
+                        aria-label="Email contact@datsforge.com">
+                        <svg class="icon">
+                            <use href="#mail_icon"></use>
                         </svg>
-                    </button>
+                    </a>
                 </div>
             </div>
         </section>
@@ -324,6 +333,8 @@
     <footer></footer>
 
     <!-- Scripts -->
+    <script src="assets/js/fireflies.js" defer></script>
+    <script src="assets/js/typing-anim.js" defer></script>
 
     <!-- Load Icons -->
     <div id="svg-sprite-container"></div>
