--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -22,11 +22,13 @@
 </head>
 
 <body>
-    <!-- Navigation -->
-    <nav id="navbar" role="navigation" aria-label="Main Navigation"></nav>
+    <header>
+        <!-- Navigation -->
+        <nav id="navbar" role="navigation" aria-label="Main Navigation"></nav>
+    </header>
 
     <!-- Main Content -->
-    <main>
+    <main id="main-content">
         <div class="container">
             <article class="layout-column">
                 <h1>Hey there!</h1>
@@ -89,6 +91,8 @@
         import { loadComponent } from '/assets/js/component-loader.js';
         import { setupMobileNavToggles } from '/assets/js/mobile-nav-menu-handler.js';
         import { setupThemeToggle } from '/assets/js/theme-toggle.js';
+        import { setupNavScroll } from '/assets/js/nav-scroll.js';
+
         try {
             await loadComponent({
                 url: '/assets/html/footer/footer-main.html',
@@ -100,6 +104,7 @@
                 targetSelector: '#navbar-main',
                 mountPoint: '#navbar'
             });
+            setupNavScroll();
             setupMobileNavToggles();
             setupThemeToggle();
         } catch (err) {
@@ -107,9 +112,6 @@
             // ex. showErrorToUser('Failed to load component');
         }
     </script>
-
-    <!-- Navigation Scroll Script -->
-    <script src="../js/nav-scroll.js"></script>
 </body>
 
 </html>
