--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <h2 id="about-section">Hey there!</h2>
             <article class="layout-column align-center section-divider" aria-labelledby="section-intro">
-                <h3>Forge ideas into unforgettable experiences!</h3>
+                <h3>Turn ideas into unforgettable experiences!</h3>
                 <p>From enchanting pixel worlds to smart, seamless tools — every line of code and stroke of art here is
                     crafted to spark curiosity, solve real problems, and feel damn good to use.
                     <br>At <strong>datsforge</strong>, I don’t just build apps or games — I shape ideas into realities
@@ -332,9 +332,16 @@
 
     <footer></footer>
 
+    <button class="fab fab-hide fab-bounce-hover" id="fab-scroll-top" aria-label="Scroll to top">
+        <svg >
+            <use href="#double_up_icon"></use>
+        </svg>
+    </button>
+
     <!-- Scripts -->
     <script src="assets/js/fireflies.js" defer></script>
     <script src="assets/js/typing-anim.js" defer></script>
+    <script src="assets/js/fab-scroll-top.js" defer></script>
 
     <!-- Load Icons -->
     <div id="svg-sprite-container"></div>
