--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <footer></footer>
 
     <button class="fab fab-hide fab-bounce-hover" id="fab-scroll-top" aria-label="Scroll to top">
-        <svg >
+        <svg class="fab-icon">
             <use href="#double_up_icon"></use>
         </svg>
     </button>
