added hero decoration bar

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                     </a>
                 </div>
             </div>
+            <div class="hero-deco-bar"></div>
         </section>
 
         <!-- About -->
