added parallax effect on hero

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <div class="slogan" aria-label="Slogan">
                     <h1>Welcome to datsforge!</h1>
                     <!-- Example how to create a terminal typing-->
-                    <!-- <h1 class="typing-anim" data-lines='[
+                    <!-- <p class="typing-anim" data-lines='[
   "Welcome to datsforge...",
   "Generating synthetic thoughts...",
   "Terminal ready for domination..."
-]'></h1> -->
+]'></p> -->
                     <p>" YOUR ideas</p>
                     <p>-<strong>Not just built, FORGED!</strong> "</p>
                 </div>
@@ -340,9 +340,7 @@
     </button>
 
     <!-- Scripts -->
-    <script src="assets/js/fireflies.js" defer></script>
-    <script src="assets/js/typing-anim.js" defer></script>
-    <script src="assets/js/fab-scroll-top.js" defer></script>
+    <script src="assets/js/home-anim.js" defer></script>
 
     <!-- Load Icons -->
     <div id="svg-sprite-container"></div>
