minor fab changes for mobile

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                                 <li>Custom-built engine/framework logic</li>
                             </ul>
                         </div>
-                        <div class="flex-table-cell transparent">
+                        <!-- <div class="flex-table-cell transparent">
                             <h4>App Development</h4>
                             <ul>
                                 <li>Android SDK (Java/Kotlin)</li>
@@ -133,12 +133,12 @@
                                 <li>Performance Optimization for Low-end devices</li>
                                 <li>Open-source libraries (Retrofit, Room, etc.)</li>
                             </ul>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
 
                 <section>
-                    <h3>Design & Pixel Art</h3>
+                    <!-- <h3>Design & Pixel Art</h3>
                     <div class="flex-table">
                         <div class="flex-table-cell transparent">
                             <h4>Tools & Skills</h4>
@@ -157,7 +157,7 @@
                                 <li>Branding assets (e.g., logos for apps or games)</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </section>
             </section>
         </div>
