--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <div class="hero-deco-bar"></div>
         </section>
 
-        <!-- About -->
+        <!-- Brief intro -->
         <div class="container">
-            <h2 id="about-section">Hey there!</h2>
+            <h2 id="intro-section">Hey there!</h2>
             <article class="layout-column align-center section-divider" aria-labelledby="section-intro">
-                <h3>Turn ideas into unforgettable experiences!</h3>
+                <h3>Turn your ideas into unforgettable digital experiences!</h3>
                 <p>From enchanting pixel worlds to smart, seamless tools — every line of code and stroke of art here is
                     crafted to spark curiosity, solve real problems, and feel damn good to use.
                     <br>At <strong>datsforge</strong>, I don’t just build apps or games — I shape ideas into realities
@@ -88,20 +88,6 @@
         <div class="container" aria-label="Skills section">
             <h2 id="skills-section">Skills</h2>
             <section class="layout-column section-divider" aria-label="Skills section">
-                <p>
-                    I’m a seasoned Java game developer with a passion for building highly customized RPGs and pixel art
-                    experiences. And yes—I handcraft every pixel of my games too. Every sprite, every scene, all forged
-                    with care and intent.
-                    <br>
-                    But I’m not just about games. I also design and build powerful Android apps using Kotlin and Jetpack
-                    Compose. From clean architecture and reactive UI to smooth performance and real-world utility—I
-                    bring ideas to life in app form too. Whether it's a smart productivity tool or a feature-rich
-                    utility, I aim to make apps that are elegant, useful, and a joy to use.
-                    <br>
-                    I don’t just develop things—I create them from scratch. Whether it's a world, a tool, or an idea, I
-                    bring it to life with attention to detail, functionality, and soul. Every project you’ll find here
-                    is a solo venture: coding, graphics, design—even this very website.
-                </p>
                 <section>
                     <h3>Core Development Skills</h3>
                     <div class="flex-table">
@@ -310,6 +296,27 @@
                     <img class="card-media" src="assets/images/mockups/datsync_m1.png" alt="datsync Mockup"
                         loading="lazy" />
                 </div>
+            </section>
+        </div>
+
+        <!-- About -->
+        <div class="container" aria-label="About section">
+            <h2 id="about-section">About me</h2>
+            <section class="layout-column section-divider" aria-label="About section">
+                <p>
+                    I’m a seasoned Java game developer with a passion for building highly customized RPGs and pixel art
+                    experiences. And yes—I handcraft every pixel of my games too. Every sprite, every scene, all forged
+                    with care and intent.
+                    <br>
+                    But I’m not just about games. I also design and build powerful Android apps using Kotlin and Jetpack
+                    Compose. From clean architecture and reactive UI to smooth performance and real-world utility—I
+                    bring ideas to life in app form too. Whether it's a smart productivity tool or a feature-rich
+                    utility, I aim to make apps that are elegant, useful, and a joy to use.
+                    <br>
+                    I don’t just develop things—I create them from scratch. Whether it's a world, a tool, or an idea, I
+                    bring it to life with attention to detail, functionality, and soul. Every project you’ll find here
+                    is a solo venture: coding, graphics, design—even this very website.
+                </p>
             </section>
         </div>
 
