--- a/assets/html/footer/footer-main.html
+++ b/assets/html/footer/footer-main.html
@@ -5,13 +5,7 @@
 
 <template id="footer-main">
     <div class="footer-main">
-        <div class="container align-start">
-            <button id="theme-toggle" class="icon-toggle-btn" aria-label="Toggle theme" type="button">
-                <svg class="icon theme-icon" width="24" height="24">
-                    <use href="#dark_mode_icon"></use>
-                </svg>
-            </button>
-        </div>
+        <!-- Home page now has a theme toggle at the hero -->
         <p>© 2025 datsforge. All rights reserved.</p>
         <a href="/assets/html/legal.html">Legal</a>
     </div>
